# entity-extraction-service

./: .env.example  .gitignore  =4.35.0  BASE_MODEL_VS_FINETUNING_INVESTIGATION.md  CHANGELOG.md  CONFIGURATION_CONSOLIDATION_SUMMARY.md  CONFIG_INVENTORY.csv  DATABASE_INTEGRATION_COMPLETE.md  DEAD_CODE_REMOVAL_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS.sh  DEPLOYMENT_PACKAGE_INDEX.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_READINESS_REPORT_v2.0.1.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXECUTIVE_SUMMARY_v2.0.1.md  FAMILY_LAW_PHASE3_FINAL_SUMMARY.md  FAMILY_LAW_PHASE3_OPTIMIZATION_REPORT.md  FAMILY_LAW_PHASE3_PATTERN_REFINEMENTS.md  FINE_TUNING_PROMPT_MISMATCH_ANALYSIS.md  FOUR_WAVE_ROUTER_UPDATE.md  FOUR_WAVE_ROUTING_QUICK_REFERENCE.md  GPU_CONFIGURATION_SUMMARY.md  HEALTH_CHECK_REPORT.md  IMPORT_STANDARDS_COMPLIANCE_REPORT.md  IMPROVED_INFERENCE_README.md  LEGALBERT_DEPLOYMENT.md  MIGRATION_SUMMARY.md  MIGRATION_V1_TO_V2.md  P0_SCHEMA_FIX_COMPLETION_REPORT.md  PATTERNLOADER_MIGRATION_SUMMARY.md  PATTERN_LOADER_UPDATE_SUMMARY.md  PATTERN_OPTIMIZATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_COMPLETION_REPORT.md  PHASE3_FAMILY_LAW_SUMMARY.md  PHASE3_PATTERN_REFERENCE.md  PHASE4_CLEANUP_SUMMARY.md  PHASE4_CODE_REVIEW_REPORT.md  PHASE4_FINAL_VALIDATION_REPORT.md  (+60 more)
config/: extraction_profiles.yaml
docs/: API_AUDIT_REPORT.md  CALES_DEPLOYMENT.md  CLEANUP_SUMMARY.md  EntityType_Quick_Reference.md  FAMILY_LAW_PATTERN_OPTIMIZATION_REPORT.md  FAMILY_LAW_PHASE2_OPTIMIZATION_REPORT.md  GPU1_CONFIGURATION.md  INTEGRATION_GUIDE.md  LurisEntityV2_Specification.md  MIGRATION_GUIDE_v2.0.1.md  PHASE1_DEPLOYMENT_SUMMARY.md  PHASE2_CODE_REVIEW_REPORT.md  PHASE2_DEPLOYMENT_SUMMARY.md  PHASE3_DEPLOYMENT_SUMMARY.md  PHASE4_DEPLOYMENT_SUMMARY.md  REGEX_OPTIMIZATION_BEST_PRACTICES.md  TEMPERATURE_CONFIGURATION.md  UNUSED_CODE_ANALYSIS.md  VLLM_INFRASTRUCTURE_ISSUE.md  all-entities-patterns-examples.md  document_upload_api.md  entity-service-tech-spec.md  entity-types.md  graphrag-db-schema-viz.html  legal-drafting-service-arch.html  legal-entity-context-spec.md  legal_bert_training_technical_spec.md  legal_entity_specs.md  legal_llm_models_guide.md  service_mode_improvements.md  vllm-config-migration.md  vllm-config-quickstart.md  vllm_factory_error_handling_improvements.md  vllm_guided_decoding_investigation_report.md
monitoring/: README.md  check_performance.py  install_monitoring.sh  luris-vllm-monitor.service  monitor_integration.py  monitor_service.py  vllm_monitor.py
scripts/: generate_performance_visualization.py  optimize_family_law_patterns.py  optimize_family_law_patterns_v2.py
src/: __init__.py  hybrid_extractor.py
src/api/: __init__.py  main.py
src/client/: __init__.py  entity_extraction_client.py
src/config/: entity_type_mappings.json
src/core/: __init__.py  config.py  config_validator.py  entity_models.py  entity_processor.py  entity_registry.py  extraction_orchestrator.py  extraction_orchestrator_chunked.py  extraction_service.py  extraction_service_parallel.py  json_response_parser.py  multi_pass_extractor.py  page_batch_processor.py  pattern_cache.py  performance_monitor.py  prompt_manager.py  prompt_service_adapter.py  regex_engine.py  registry_integration.py  response_cache.py  smart_chunker.py  throttled_integration.py  throttled_vllm_client.py  unpatterned_integration.py  vllm_performance_optimizer.py  vllm_resilience.py
src/database/: __init__.py  graph_storage.py
src/models/: README.md  __init__.py  entities.py  extraction_strategy.py  pattern_statistics.py  registry.py  requests.py  responses.py
src/prompts/: README.md
src/routing/: README.md  __init__.py  document_router.py  size_detector.py
src/schemas/: __init__.py  guided_json_schemas.py
src/utils/: __init__.py  pattern_loader.py
src/vllm_client/: README.md  __init__.py  client.py  exceptions.py  factory.py  gpu_monitor.py  models.py  token_estimator.py
tests/: GUIDED_JSON_TEST_README.md  GUIDED_JSON_VALIDATION_SUMMARY.md  METRICS_COLLECTOR_README.md  RUN_GUIDED_JSON_TESTS.sh  TESTING_STANDARDS.md  TEST_FRAMEWORK_REPORT.md  TEST_FRAMEWORK_SUMMARY.md  TEST_FRAMEWORK_UPDATE_SUMMARY.md  TEST_RESULTS_SUMMARY.md  VLLM_OPTIMIZATION_TEST_README.md  analyze_performance.py  cales_pipeline_testing_plan.md  entity_visualization.py  exported_config.yaml  extraction_analysis_report.html  extraction_report_20250909_200225.html  extraction_report_20250909_200427.html  extraction_report_20250909_202101.html  extraction_report_20250909_204932.html  extraction_results_20250909_200225.json  extraction_results_20250909_200427.json  extraction_results_20250909_202101.json  extraction_results_20250909_204932.json  extraction_test_results.json  final_fix_report.html  fix_analysis_report.html  focused_extraction_results_20250826_160336.json  generate_final_report.py  generate_performance_report.py  metrics_collector.py  perf_results_20250909_193252.json  quality_testing_framework.py  rahimi_processor.py  report_generator.py  result_generator.py  run_all_tests.py  run_comprehensive_tests.py  run_guided_json_tests.sh  run_vllm_optimization.py  test_chunking.py  (+21 more)
tests/dobbs_testing/: CHUNKING_IMPLEMENTATION_REPORT.md  CHUNKING_RESULTS.md  EXTRACTION_TEST_SUMMARY.md  README.md  VISUAL_QUALITY_SUMMARY.md  chunking_config.yaml  chunking_strategy.md  comprehensive_quality_report.md  dobbs_chunked_test.py  dobbs_comprehensive_test.py  dobbs_quick_chunked_test.py  dobbs_quick_test.py  dobbs_simple_test.py  enhanced_visual_dashboard.py  entity_type_analyzer.py  generate_test_results.py  requirements.txt  run_test.sh  test_smart_chunking.py  visual_quality_inspector.py
tests/e2e/: TIER2_TEST_GUIDE.md  TIER3_TEST_EXECUTION_SUMMARY.md  TIER3_TEST_SUITE_README.md  conftest.py  test_family_law_tier1.py  test_family_law_tier2.py  test_family_law_tier3.py  tier3_fixtures.py
tests/eyecite_evaluation/: README.md  extract_citations.py  requirements.txt
tests/modules/: document_chunker.py  extraction_orchestrator.py  report_generator.py  result_merger.py  token_estimator.py  vllm_monitor.py
tests/scripts/: README.md  (+2 more)
(+272 files in other folders)
